--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
 
     <section class="other-zone-section">
-      <h2>その他（枠外）</h2>
+      <h2>その他</h2>
       <div class="drop-zone" data-type="other" tabindex="0">
         <h3>その他</h3>
       </div>
