--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <main class="app">
     <header>
       <h1>勘定科目分類ゲーム</h1>
-      <p>挑戦する級を選び、表示された勘定科目をタップで分類しましょう。資産 / 負債 / 純資産 / 収益 / 費用 / その他の理解度を連続出題でチェックできます。</p>
+      <p>挑戦する級を選び、表示された勘定科目をタップで分類しましょう。</p>
     </header>
 
     <section class="control-panel">
