feat: ミッションクリア状況を表示するカレンダーUI、関連ロジック、およびスタイルを追加

--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
             <h3 id="achievement-title">🏅 称号</h3>
             <ul id="achievement-list" class="ranking-list achievement-list"></ul>
           </div>
+          <div class="stats-col stats-mini stats-calendar">
+            <h3 id="calendar-title">📅 ミッションクリア</h3>
+            <div class="calendar-header">
+              <button type="button" id="calendar-prev" class="ghost-button calendar-nav">◀</button>
+              <span id="calendar-month"></span>
+              <button type="button" id="calendar-next" class="ghost-button calendar-nav">▶</button>
+            </div>
+            <div id="mission-calendar" class="calendar-grid"></div>
+          </div>
         </div>
 
         <div class="charts-wrapper">
