--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#fdfbf7" />
+  <link rel="manifest" href="manifest.json" />
   <title>勘定科目分類ゲーム</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -238,6 +240,8 @@
   </div>
 
   <script src="script.js"></script>
+
+  <footer class="app-footer">© Daisuke NAKAMURA</footer>
 </body>
 
 </html>
