feat: 統計表示に問題数フィルターを追加し、履歴保存と表示ロジックを更新

--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@
       </div>
 
       <div class="stats-content">
+        <div class="chart-filter">
+          <label for="question-filter">出題数</label>
+          <select id="question-filter">
+            <option value="all">全て</option>
+            <option value="10">10問</option>
+            <option value="20">20問</option>
+            <option value="30">30問</option>
+          </select>
+        </div>
+
         <div class="stats-meta">
           <div class="stats-col stats-mini">
             <h3 id="mission-title">🎯 今日のミッション</h3>
