feat: 勘定科目図鑑を勘定科目辞書に名称変更し、辞書タイトルに試験名を追加しました。

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
 
         <div class="stats-col stats-dictionary">
-          <h3 id="dictionary-title">📚 勘定科目図鑑</h3>
+          <h3 id="dictionary-title">📚 勘定科目辞書</h3>
           <ul id="dictionary-list" class="ranking-list dictionary-list"></ul>
         </div>
 
