--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           <select id="exam-select" required>
             <option value="日商" selected>日商</option>
           </select>
-          <label for="grade-select">級を選択</label>
+          <label for="grade-select">級</label>
           <select id="grade-select" required>
             <option value="3級" selected>3級</option>
             <option value="2級">2級</option>
           </select>
-          <label class="yomi-toggle"><input type="checkbox" id="show-yomi"> よみを表示</label>
+          <label class="yomi-toggle"><input type="checkbox" id="show-yomi"> よみ表示</label>
         </form>
         <div class="start-buttons">
           <button type="button" class="start-button push-btn" data-count="10" disabled>10問</button>
