fix: 確認ダイアログの「消去する」ボタンのテキストを「消去」に修正

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <p class="confirm-note">※この操作は取り消せません</p>
       <div class="result-actions">
         <button type="button" id="confirm-cancel" class="ghost-button">キャンセル</button>
-        <button type="button" id="confirm-ok" class="primary-button push-btn danger-btn">消去する</button>
+        <button type="button" id="confirm-ok" class="primary-button push-btn danger-btn">消去</button>
       </div>
     </div>
   </div>
