feat: index.htmlにFirebase初期化とFirestore接続コードを追加し、firebase.txtを新規作成

--- a/firebase/index.html
+++ b/firebase/index.html
@@ -258,6 +258,35 @@
   <script src="script.js"></script>
 
   <footer class="app-footer">© Daisuke NAKAMURA</footer>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+    // Firestore
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAGPO78QvkLDt3FvjhpSqV6OYRm--DMzGg",
+      authDomain: "ac-game-prod.firebaseapp.com",
+      projectId: "ac-game-prod",
+      storageBucket: "ac-game-prod.firebasestorage.app",
+      messagingSenderId: "101943470104",
+      appId: "1:101943470104:web:ed5d08b13f9298b7e27b6d"
+    };
+
+    // Firebase初期化
+    const app = initializeApp(firebaseConfig);
+    // Firestore初期化
+    const db = getFirestore(app);
+
+    // 既存のscript.jsから使えるようにグローバルへ出しておく
+    window.firebaseApp = app;
+    window.db = db;
+  </script>
+
 </body>
 
 </html>
