--- a/index.html
+++ b/index.html
@@ -258,6 +258,84 @@
   <script src="script.js"></script>
 
   <footer class="app-footer">© Daisuke NAKAMURA</footer>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+    // Firestore
+    import {
+      getFirestore,
+      collection,
+      addDoc,
+      serverTimestamp,
+      doc,
+      setDoc,
+      updateDoc,
+      increment
+    } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAGPO78QvkLDt3FvjhpSqV6OYRm--DMzGg",
+      authDomain: "ac-game-prod.firebaseapp.com",
+      projectId: "ac-game-prod",
+      storageBucket: "ac-game-prod.firebasestorage.app",
+      messagingSenderId: "101943470104",
+      appId: "1:101943470104:web:ed5d08b13f9298b7e27b6d"
+    };
+
+    // Firebase初期化
+    const app = initializeApp(firebaseConfig);
+    // Firestore初期化
+    const db = getFirestore(app);
+
+    // 既存のscript.jsから使えるようにグローバルへ出しておく
+    window.firebaseApp = app;
+    window.db = db;
+
+    // Firestoreへのログ保存をグローバルに公開
+    window.saveLogsToFirestore = async function saveLogsToFirestore(summary, rows) {
+      return await addDoc(collection(db, "sessions"), {
+        summary,
+        rows,
+        createdAt: serverTimestamp(),
+      });
+    };
+
+    // 間違えた科目を蓄積する
+    window.updateMistakesFromRows = async function updateMistakesFromRows(summary, rows) {
+      const db = window.db;
+      if (!db) return;
+      const { playerId, exam, grade } = summary || {};
+
+      if (!playerId || !exam || !grade) {
+        console.warn("summary に playerId/exam/grade が足りないため mistakes は更新しません");
+        return;
+      }
+
+      const mistakesCol = collection(db, "mistakes");
+      const wrongRows = (rows || []).filter(r => r && r.result === "wrong");
+
+      for (const row of wrongRows) {
+        const account = row.account;
+        if (!account) continue;
+
+        const idBase = `${playerId}__${exam}__${grade}__${account}`;
+        const docRef = doc(mistakesCol, idBase);
+
+        await setDoc(docRef, {
+          playerId,
+          exam,
+          grade,
+          account,
+          wrongCount: increment(1),
+          seenCount: increment(1),
+          lastWrongAt: serverTimestamp(),
+        }, { merge: true });
+      }
+    };
+  </script>
+
 </body>
 
 </html>
